--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -161,15 +161,19 @@
   title: "Animation"
 - 
   date: "Week 9: Oct 19"
-  materials: " Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf) <br/>"
+  materials: " Guest Lectures by Luther Tychonievich<br/>
+               Character Animation [Video](https://classtranscribe.illinois.edu/video?id=bf285438-0779-4a81-a2d4-9ece963789f2&from=sharedlink)<br/>
+               Rigid Body Dynamics [Video](https://classtranscribe.illinois.edu/video?id=51171b76-711e-45a8-a5a1-1a9c903bbcd3&from=sharedlink)"  
   title: "Animation"
 - 
   date: "Week 10: Oct 24"
-  materials: ""
+  materials: "[Video]()<br/>
+               Euler Angles [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-EulerAngles.pdf)<br/>
+               Quaternions [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Quaternions.pdf)"
   title: "Animation"
 - 
   date: "Week 10: Oct 26"
-  materials: ""
+  materials: " Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf) <br/>"
   title: "Animation"
 - 
   date: "Week 11: Oct 31"
