--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -167,7 +167,7 @@
   title: "Animation"
 - 
   date: "Week 10: Oct 24"
-  materials: "[Video]()<br/>
+  materials: "[Video](https://classtranscribe.illinois.edu/video?id=97c067fb-ae72-450a-91ee-02cf42666c78&from=sharedlink)<br/>
                Euler Angles [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-EulerAngles.pdf)<br/>
                Quaternions [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Quaternions.pdf)"
   title: "Animation"
