--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -176,7 +176,8 @@
   title: "Animation"
 - 
   date: "Week 10: Oct 26"
-  materials: " Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf) <br/>"
+  materials: " Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf) <br/>
+               **PrairieLearn HW 4 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2373906)**"
   title: "Animation"
 - 
   date: "Week 11: Oct 31"
