--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -186,7 +186,11 @@
             **Time Returned from Exam**"
 - 
   date: "Week 11: Nov 2"
-  materials: ""
+  materials: "**Pre-Recorded Videos:**<br/>
+             Chaos Physics in UE [YouTube](https://youtu.be/6T8LzaIq3Qs)<br/>
+             Guest Lectures by Luther Tychonievich<br/>
+             Destruction Physics [Video](https://classtranscribe.illinois.edu/video?id=8f16cd7f-e51f-4c86-976f-5962987b949b&from=sharedlink)<br/>
+             Ragdoll Physics [Video](https://classtranscribe.illinois.edu/video?id=35043ccf-b542-4f42-877a-d6aa7bac640a&from=sharedlink)"
   title: "Game Physics"
 - 
   date: "Week 12: Nov 7"
