--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -176,7 +176,10 @@
   title: "Animation"
 - 
   date: "Week 10: Oct 26"
-  materials: " Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf) <br/>
+  materials: "**Pre-Recorded Videos:**<br/>
+              Guest Lectures by Luther Tychonievich<br/>
+             Character Animation [Video](https://classtranscribe.illinois.edu/video?id=bf285438-0779-4a81-a2d4-9ece963789f2&from=sharedlink)<br/>
+             Rigid Body Dynamics [Video](https://classtranscribe.illinois.edu/video?id=51171b76-711e-45a8-a5a1-1a9c903bbcd3&from=sharedlink)"  
                **PrairieLearn HW 4 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2373906)**"
   title: "Animation"
 - 
@@ -199,8 +202,8 @@
   title: "Game Physics"
 - 
   date: "Week 12: Nov 9"
-  materials: ""
-  title: "Game Physics"
+  materials: "Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf) <br/>"
+  title: "Animation"
 - 
   date: "Week 13: Nov 14"
   materials: ""
