--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -207,7 +207,7 @@
   title: "Animation"
 - 
   date: "Week 13: Nov 14"
-  materials: ""
+  materials: "**PrairieLearn HW 5 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359392)**"
   title: "Game AI"
 - 
   date: "Week 13: Nov 16"
@@ -224,7 +224,7 @@
 - 
   date: "Week 15: Nov 28"
   materials: ""
-  title: "Game Industry: Guest Lecture"
+  title: "UE 5 Substrate"
 - 
   date: "Week 15: Nov 30"
   materials: ""
