--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -213,9 +213,9 @@
   title: "Game AI & Animation"
 - 
   date: "Week 13: Nov 16"
-  materials: "Rules of the Game: Five Techniques from Quite Inventive Designers 2016 [YouTube](https://youtu.be/d8QAVGeEj-U?si=Fk8f2ovx1zX7_cEQ)<br/>
-              Designing Games for Game Designers 2012 [YouTube](https://youtu.be/ke_kOD2D-bs?si=FazHhxS2jCf3Q6LL)"
-  title: "GDC Talks on Game Design"
+  materials: "Rules of the Game:<br/> Five Techniques from Quite Inventive Designers (2016) [YouTube](https://youtu.be/d8QAVGeEj-U?si=Fk8f2ovx1zX7_cEQ)<br/>
+              Designing Games for Game Designers (2012) [YouTube](https://youtu.be/ke_kOD2D-bs?si=FazHhxS2jCf3Q6LL)"
+  title: "GDC Talks on Design"
 - 
   date: "Week 14: Nov 21"
   materials: ""
