--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -203,7 +203,7 @@
   title: "Game Physics"
 - 
   date: "Week 12: Nov 9"
-  materials: "Physics Engine Basics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PhysicsEngine.pdf)"
+  materials: "Physics Engine Basics [Video](https://classtranscribe.illinois.edu/video?id=d1c447b7-7df1-498c-8708-8220c63ef8e2&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PhysicsEngine.pdf)"
   title: "Game Physics"
 - 
   date: "Week 13: Nov 14"
