--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -228,6 +228,7 @@
 - 
   date: "Week 15: Nov 28"
   materials: "[Video]()<br/>
+               GDC/GTC 2022 NVIDIA Real-Time Path Tracing [Talk Video](https://research.nvidia.com/publication/2022-03_Research-Advances-Toward)<br/>
                Ray Tracing Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf) <br/>
                Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)"
   title: "Real-Time Ray Tracing"
