--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -161,9 +161,8 @@
   title: "Animation"
 - 
   date: "Week 9: Oct 19"
-  materials: " Guest Lectures by Luther Tychonievich<br/>
-               Character Animation [Video](https://classtranscribe.illinois.edu/video?id=bf285438-0779-4a81-a2d4-9ece963789f2&from=sharedlink)<br/>
-               Rigid Body Dynamics [Video](https://classtranscribe.illinois.edu/video?id=51171b76-711e-45a8-a5a1-1a9c903bbcd3&from=sharedlink)"  
+  materials: " Guest Lecture by Luther Tychonievich<br/>
+               Character Animation [Video](https://classtranscribe.illinois.edu/video?id=bf285438-0779-4a81-a2d4-9ece963789f2&from=sharedlink)"  
   title: "Animation"
 - 
   date: "Week 10: Oct 24"
@@ -177,8 +176,7 @@
 - 
   date: "Week 10: Oct 26"
   materials: "**Pre-Recorded Videos:**<br/>
-              Guest Lectures by Luther Tychonievich<br/>
-             Character Animation [Video](https://classtranscribe.illinois.edu/video?id=bf285438-0779-4a81-a2d4-9ece963789f2&from=sharedlink)<br/>
+              Guest Lecture by Luther Tychonievich<br/>
              Rigid Body Dynamics [Video](https://classtranscribe.illinois.edu/video?id=51171b76-711e-45a8-a5a1-1a9c903bbcd3&from=sharedlink)<br/>  
                **PrairieLearn HW 4 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2373906)**"
   title: "Animation"
@@ -230,11 +228,12 @@
   materials: "[Video]()<br/>
                GDC/GTC 2022 NVIDIA Real-Time Path Tracing [Talk Video](https://research.nvidia.com/publication/2022-03_Research-Advances-Toward)<br/>
                Ray Tracing Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf) <br/>
-               Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)"
+               Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)<br/><br/>
+               **PrairieLearn HW 6 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359391)**""
   title: "Real-Time Ray Tracing"
 - 
   date: "Week 15: Nov 30"
-  materials: ""
+  materials: "[Creative Future with Artificial Intelligence: GDC 2023 Talk](https://youtu.be/fOqLuWml0UY?si=xPrp1KrPRyQIvGt-)"
   title: "Generative AI"
 - 
   date: "Week 16: Dec 5"
