--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -233,7 +233,7 @@
   title: "Real-Time Ray Tracing"
 - 
   date: "Week 15: Nov 30"
-  materials: "[Creative Future with Artificial Intelligence: GDC 2023 Talk](https://youtu.be/fOqLuWml0UY?si=xPrp1KrPRyQIvGt-)"
+  materials: "[Creative Future with Artificial Intelligence - GDC 2023 Talk](https://youtu.be/fOqLuWml0UY?si=wXWE04Opl8HpHvVs)"
   title: "Generative AI"
 - 
   date: "Week 16: Dec 5"
