--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -229,7 +229,7 @@
                GDC/GTC 2022 NVIDIA Real-Time Path Tracing [Talk Video](https://research.nvidia.com/publication/2022-03_Research-Advances-Toward)<br/>
                Ray Tracing Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf) <br/>
                Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)<br/><br/>
-               **PrairieLearn HW 6 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359391)**""
+               **PrairieLearn HW 6 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359391)**"
   title: "Real-Time Ray Tracing"
 - 
   date: "Week 15: Nov 30"
