--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -225,7 +225,7 @@
   title: "**No Class - Fall Break**"
 - 
   date: "Week 15: Nov 28"
-  materials: "[Video]()<br/>
+  materials: "[Video](https://classtranscribe.illinois.edu/video?id=d03d7291-761b-4a14-b462-fa2f7319bae6&from=sharedlink)<br/>
                GDC/GTC 2022 NVIDIA Real-Time Path Tracing [Talk Video](https://research.nvidia.com/publication/2022-03_Research-Advances-Toward)<br/>
                Ray Tracing Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf) <br/>
                Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)<br/><br/>
