--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -179,7 +179,7 @@
   date: "Week 10: Oct 26"
   materials: "**Pre-Recorded Videos:**<br/>
               Guest Lecture by Luther Tychonievich<br/>
-             Rigid Body Dynamics [Video](https://classtranscribe.illinois.edu/video?id=51171b76-711e-45a8-a5a1-1a9c903bbcd3&from=sharedlink)<br/>  
+             Rigid Body Dynamics [Video](https://classtranscribe.illinois.edu/video?id=51171b76-711e-45a8-a5a1-1a9c903bbcd3&from=sharedlink)<br/><br/>  
                **PrairieLearn HW 4 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2373906)**"
   title: "Animation"
 - 
