--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -28,4 +28,120 @@
               Real-Time Rendering Section 17.1.1-17.1.3, 17.2.1-17.2.3 <br/>
               [PDF](https://drive.google.com/file/d/1EPESnk8Lh3j68csYFnNSwDOINlwTWdsJ/view?usp=sharing) "
   title: "Geometric Modeling"
+-
+  date: "Week 3: Jan 30"
+  materials: ""
+  title: "Rendering"
+- 
+  date: "Week 3: Feb 1"
+  materials: ""
+  title: "Rendering"
+-
+  date: "Week3: 4 Credit Section"
+  materials: ""
+  title: "VR/XR"
+- 
+  date: "Week 4: Feb 6"
+  materials: ""
+  title: "Rendering"
+-
+  date: "Week 4: Feb 8"
+  materials: ""
+  title: "Rendering" 
+-
+  date: "Week 5: Feb 13"
+  materials: ""
+  title: "Game Design"
+-
+  date: "Week 5: Feb 15"
+  materials: ""
+  title: "Game AI"
+- 
+  date: "Week 5: 4 Credit Section"
+  materials: ""
+  title: "VR/XR"
+-
+  date: "Week 6: Feb 20"
+  materials: ""
+  title: "Rendering"
+- 
+  date: "Week 6: Feb 22"
+  materials: ""
+  title: "Rendering"
+- 
+  date: "Week 7: Feb 27"
+  materials: ""
+  title: "Guest Lecture: Game Industry"
+- 
+  date: "Week 7: Feb 29"
+  materials: ""
+  title: "Rendering"
+- 
+  date: "Week 8: March 5"
+  materials: ""
+  title: "Rendering"
+- 
+  date: "Week 8: March 7"
+  materials: ""
+  title: "Game Design"
+-
+  date: "Week 9: March 12"
+  materials: "**No Lecture**"
+  title: "**Spring Break**"
+-
+  date: "Week 9: March 14"
+  materials: "**No Lecture**"
+  title: "**Spring Break**"
+- 
+  date: "Week 10: March 19"
+  materials: " **[Exam Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359386)**"
+  title: "Exam 1"
+- 
+  date: "Week 10: March 21"
+  materials: ""
+  title: "Animation"
+- 
+  date: "Week 11: April 2"
+  materials: ""
+  title: ""
+- 
+  date: "Week 11: April 4"
+  materials: ""
+  title: "Game Physics"
+- 
+  date: "Week 12: April 9"
+  materials: ""
+  title: "Game Physics"
+- 
+  date: "Week 12: April 11"
+  materials: ""
+  title: "Game Physics"
+- 
+  date: "Week 13: April 16"
+  materials: ""
+  title: "Game AI & Animation"
+- 
+  date: "Week 13: April 18"
+  materials: ""
+  title: "GDC Talks on Design"
+- 
+  date: "Week 14: April 23"
+  materials: ""
+  title: ""
+- 
+  date: "Week 14: April 25"
+  materials: ""
+  title: ""
+- 
+  date: "Week 15: April 30"
+  materials: ""
+  title: "Real-Time Ray Tracing"
+- 
+  date: "Week 15: May 2"
+  materials: ""
+  title: "Generative AI"
+- 
+  date: "Week 16: May 7"
+  materials: "**[Exam Link]()**"
+  title: "**EXAM 2**"
 - 
