--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -78,8 +78,8 @@
   title: "Rendering"
 - 
   date: "Week 8: March 5"
-  materials: ""
-  title: "Rendering"
+  materials: "**[Exam Link]()**"
+  title: "**EXAM 1**"
 - 
   date: "Week 8: March 7"
   materials: ""
@@ -94,8 +94,8 @@
   title: "**Spring Break**"
 - 
   date: "Week 10: March 19"
-  materials: " **[Exam Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359386)**"
-  title: "Exam 1"
+  materials: "**No Live Lecture**"
+  title: ""
 - 
   date: "Week 10: March 21"
   materials: ""
