--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -10,6 +10,7 @@
 - 
   date: "Week 2: Jan 23"
   materials: "Art: Assets [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-ArtOverview.pdf) <br/>
+  Art: FBX Files [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-SceneGraphs and FBX.pdf)<br/>
               UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf)<br/>
               Lecture [Video]() <br/><br/>
               **MP1 Due Jan 31** [Link](https://illinois-cs415.github.io/assignments/mp1.html)<br/><br/>
