--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -71,7 +71,17 @@
   title: "Game Design"
 -
   date: "Week 5: Feb 15"
-  materials: ""
+  materials:  Game AI History [Video](https://classtranscribe.illinois.edu/video?id=cba3333a-7004-4582-8605-b9cef1b2b740&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-1.pdf) <br/>
+   Pathfinding [Video](https://classtranscribe.illinois.edu/video?id=1fe9cc72-35da-4c92-beaf-90dabec2d268&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-3.pdf)
+   <br/>A* in Games [Video](https://classtranscribe.illinois.edu/video?id=9464b539-b000-4df0-bc81-398c9935b5ad&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-4.pdf) <br/>
+    **PrairieLearn HW 2 [Coming Soon]()**
+   
+   <br/><br/>
+   
+    **Optional Reading**<br/>
+    AI for Games 3rd Edition by Ian Millington Sections 4.1 to 4.3<br/>
+    [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955033014505899)
+    "
   title: "Game AI"
 - 
   date: "Week 5: 4 Credit Section"
@@ -83,8 +93,8 @@
   title: "VR/XR"
 -
   date: "Week 6: Feb 20"
-  materials: ""
-  title: "Game AI"
+  materials: "UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)"
+  title: "Rendering"
 - 
   date: "Week 6: Feb 22"
   materials: "Rasterization [2022 Video](https://classtranscribe.illinois.edu/video?id=36abfac0-7011-49b4-9f67-f9766b24900f&from=sharedlink) [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Rasterization.pdf)<br/>
