--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -98,7 +98,7 @@
               AI: Waypoints [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-AI-5.pptx.pdf)<br/><br/>
              **Optional Reading:**<br/>
               AI for Games 3rd Edition by Ian Millington Chapter 6<br/>
-              [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955033014505899)<br/>""
+              [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955033014505899)<br/>"
   title: "Rendering<br/>
           Game AI"
 - 
