--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -116,6 +116,7 @@
   date: "Week 7: Feb 27"
   materials: "Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading.pdf) [Video](https://classtranscribe.illinois.edu/video?id=ff33b10f-c7f4-4df0-838f-183e77ee7b81&from=sharedlink)<br/>
               <br/><br/>
+              **PrairieLearn HW 3 Assigned [Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390708)**<br/><br/>
               **Optional Reading:**<br/>
                Wikipedia Phong Reflection Model [Link](https://en.wikipedia.org/wiki/Phong_reflection_model)<br/>
                Fundamentals of Computer Graphics Ch 5 [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955292160105899)<br/>
@@ -133,11 +134,13 @@
   title: "**EXAM 1**"
 - 
   date: "Week 8: March 7"
-  materials: "AI: Waypoints [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-AI-5.pptx.pdf)<br/><br/>
-             **Optional Reading:**<br/>
-              AI for Games 3rd Edition by Ian Millington Chapter 6<br/>
-              [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955033014505899)<br/>"
-  title: "Game AI"
+  materials: "**Guest Lectures by Dan Cermak:**<br/>
+                Design Methodologies [Video](https://classtranscribe.illinois.edu/video?id=43939a1e-83eb-4e86-9922-779d58b96195&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/CS%20DesignSet1%20Intro.pdf) <br/> 
+                Principles of Design [Video](https://classtranscribe.illinois.edu/video?id=2cc09042-db19-4bc3-b4c5-798ca4d4382a&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/CS%20DesignSet2%20Principles%20NV.pdf) <br/> 
+                Vision Canvas [Video](https://classtranscribe.illinois.edu/video?id=210783b1-9e3c-44b0-8e77-93c1a6080462&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/CS%20DesignSet3%20Canvas.pdf) <br/> 
+                MDA [Video](https://classtranscribe.illinois.edu/video?id=83272dee-ed41-421c-bbf0-c48312e91d2a&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/CS%20DesignSet4%20MDA.pdf) <br/> 
+                Narrative [Video](https://classtranscribe.illinois.edu/video?id=ce809e81-941d-4b26-b571-823eb55f9b4d&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/CS%20DesignSet5%20Loops%20Arcs%20World.pdf)"
+  title: "Game Design"
 -
   date: "Week 9: March 12"
   materials: "**No Lecture**"
@@ -157,11 +160,11 @@
 - 
   date: "Week 11: April 2"
   materials: ""
-  title: "Animation"
+  title: "Game AI"
 - 
   date: "Week 11: April 4"
   materials: ""
-  title: "Animation"
+  title: "Game AI"
 - 
   date: "Week 12: April 9"
   materials: ""
