--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -130,8 +130,8 @@
   title: "Rendering"
 - 
   date: "Week 8: March 5"
-  materials: "**11am Central Time [Exam Link]()**<br/><br/>
-              **7pm Central Time [Exam Link]()**"
+  materials: "**11am Central Time [Exam Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390704)**<br/><br/>
+              **7pm Central Time [Exam Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390704)**"
   title: "**EXAM 1**"
 - 
   date: "Week 8: March 7"
