--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -152,11 +152,21 @@
   title: "**Spring Break**"
 - 
   date: "Week 10: March 19"
-  materials: "**No Live Lecture**"
+  materials: "**No Live Lecture**<br/><br/>
+      <br/><br/>
+               Transformations [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-GeometricTransformations.pdf) <br/>
+               [Video](https://mediaspace.illinois.edu/media/t/1_h2vec8c5)<br/><br/>
+               **Optional Reading:**<br/>
+               Real-Time Rendering Section 4.1 [PDF](https://drive.google.com/file/d/13Oxmdg7sNspx7C2k2vrz_vmJvPA0bPfS/view?usp=sharing)"
   title: "Animation"
 - 
   date: "Week 10: March 21"
-  materials: ""
+  materials: "[2023 Course Video](https://classtranscribe.illinois.edu/video?id=97c067fb-ae72-450a-91ee-02cf42666c78&from=sharedlink)<br/>
+               Euler Angles [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-EulerAngles.pdf)<br/>
+               Quaternions [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Quaternions.pdf) <br/><br/>
+                 **Optional Reading:**<br/>
+              Real-Time Rendering Section 4.2 and 4.3<br/>
+              [PDF](https://drive.google.com/file/d/13Oxmdg7sNspx7C2k2vrz_vmJvPA0bPfS/view?usp=sharing)"
   title: "Animation"
 - 
   date: "Week 11: April 2"
